# torchlogic

./: .gitignore  README.md  mkdocs.yml  project.yaml  pyproject.toml  setup.py
docs/: README.md  build_docs.sh  index.md
docs/appendix/: tips.md
docs/ds/: brn.md  overview.md  rn.md  usecases.md
docs/formatting/: extra.css
docs/install/: install.md
docs/reference/: models.md  modules.md  nn.md  utils.md
docs/tutorials/: brn.md
experiments/: NRN_Paper_Plots_AAAI.ipynb  README.md  explain.py  explain_global.py  explain_nam.py  incremental_deletion_RF.py  incremental_deletion_RF_SHAP.py  incremental_deletion_RNRN.py  incremental_deletion_nam.py  main.py  nam_shap_size.py  pyproject.toml  query_openml.py
experiments/src/: BRCG.py  cofrnet.py  danet_model.py  datasets.py  difflogic_model.py  encoders.py  fttransformer.py  iris_datasets.py  mlp.py  nam.py  tuners.py
experiments/src/LEURN/: DATA.py  TRAINER.py
experiments/src/danet/: DAN_Task.py  abstract_model.py
experiments/src/danet/model/: DANet.py
experiments/src/neural_additive_models/: graph_builder.py  nam_train.py  requirements.txt
notebooks/tutorials/: Bandit-NRN Tutorial - Binary-Class.ipynb  Bandit-NRN Tutorial - Domain Knowledge.ipynb  Bandit-NRN Tutorial - Multi-Class.ipynb  Bandit-NRN Tutorial - Regression.ipynb
tests/: README.md
tests/models/: test__boosted_brrn.py  test__brrn.py  test_mixin_classifier.py  test_mixin_regressor.py
tests/modules/: test_attn.py  test_brnn.py  test_var.py
tests/nn/: test_base_blocks.py  test_base_predicates.py  test_base_utils.py  (+2 more)
(+59 files in other folders)
