[tool.poetry]
name = "torchlogic"
version = "0.0.3-beta"
authors = ["Anonymous"]
description = "A PyTorch framework for rapidly developing Neural Reasoning Networks."
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.5, <3.11"
torch = "^2.0.0"
numpy = "^1.25.0"
pandas = "^2.0.2"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytorch_optimizer = "^2.12.0"
torchvision = "^0.16"
xgboost = "^2.0.2"
setuptools = "^69.0.2"
aix360 = "^0.3.0"
minepy = "^1.2.6"
cvxpy = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
default_section = "THIRDPARTY"
#NOTE: Do not use use_paranthesis setting as it is not compatible with black

[tool.black]
exclude = "^tests/"
line-length = 120
skip-string-normalization = true
